--- a/baseball_stats/requirements.txt
+++ b/baseball_stats/requirements.txt
@@ -1,4 +1,7 @@
-pandas == 1.3.3
-numpy == 1.21.2 
+pandas >= 1.3.3
+numpy >= 1.21.2 
 lxml == 4.6.3
-beautifulsoup4 = 4.10.0
+beautifulsoup4 == 4.10.0
+seaborn >= 0.11.2 
+selenium == 3.141.0
+matplotlib >= 3.4.3
